# twikit-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  llms-install.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PATCHES.md  RELEASES.md
tests/: test_cursor.py  test_serialization.py
twikit/: user.py
twikit/client/: client.py
twikit/x_client_transaction/: transaction.py
twikit_mcp/: __init__.py  serialization.py  server.py
twikit_x_mcp/: serialization.py  server.py
