[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit-mcp"
version = "0.1.0"
description = "MCP server exposing twikit's Twitter/X capabilities to AI assistants — no official API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bintangtimurlangit" }]
keywords = ["mcp", "twitter", "x", "twikit", "model-context-protocol", "ai", "llm"]

dependencies = [
    "mcp>=1.2.0",
    # The published twikit is currently broken on X (the "Couldn't get KEY_BYTE
    # indices" login bug), so we pin to a patched fork that only fixes login.
    # Switch back to plain "twikit" once upstream ships a fix.
    # Original library: https://github.com/d60/twikit
    "twikit @ git+https://github.com/bintangtimurlangit/twikit@fix/login-transaction-and-2fa",
]

[project.urls]
Homepage = "https://github.com/bintangtimurlangit/twikit-mcp"
"twikit (upstream)" = "https://github.com/d60/twikit"

[project.scripts]
twikit-mcp = "twikit_mcp.server:main"

[tool.setuptools]
packages = ["twikit_mcp"]
