[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit-mcp"
version = "0.1.0"
description = "MCP server exposing twikit's Twitter/X capabilities to AI assistants — no official API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bintangtimurlangit" }]
keywords = ["mcp", "twitter", "x", "twikit", "model-context-protocol", "ai", "llm"]

dependencies = [
    "mcp>=1.2.0",
    # twikit is bundled (vendored) in this repo under twikit/ with a login patch,
    # because the published twikit is broken on X (the "Couldn't get KEY_BYTE
    # indices" login bug). These are twikit's own runtime dependencies. When
    # upstream ships a login fix, delete the bundled twikit/ and add "twikit"
    # here instead. Original library: https://github.com/d60/twikit
    "httpx[socks]",
    "filetype",
    "beautifulsoup4",
    "pyotp",
    "lxml",
    "webvtt-py",
    "m3u8",
    "Js2Py-3.13",
]

[project.urls]
Homepage = "https://github.com/bintangtimurlangit/twikit-mcp"
"twikit (original library)" = "https://github.com/d60/twikit"

[project.scripts]
twikit-mcp = "twikit_mcp.server:main"

[tool.setuptools.packages.find]
include = ["twikit*", "twikit_mcp*"]

[tool.setuptools.package-data]
twikit = ["py.typed"]
